# rusty-commit-lister

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  devenv.nix  lcov.info  treefmt.toml
.github/workflows/: build.yml  ci.yml  codeql.yml  deny.yml  docs.yml  release.yml  rust-tests.yml  security-audit.yml
docs/architecture/: atdd-infrastructure-policy.md
docs/evolution/: rusty-commit-lister-evolution.md
docs/feature/rusty-commit-lister/: feature-delta.md
docs/feature/rusty-commit-lister/deliver/: .develop-progress.json  execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-02/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-03/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-04/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-05/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-06/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-07/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/deliver-08/: execution-log.json  roadmap.json
docs/feature/rusty-commit-lister/discuss/: outcome-kpis.md  shared-artifacts-registry.md  story-map.md  user-stories.md
docs/feature/rusty-commit-lister/distill/: red-classification.md
docs/feature/rusty-commit-lister/slices/: slice-01-walking-skeleton.md  slice-02-full-browse.md  slice-03-search.md  slice-04-detail-view.md  slice-05-clipboard-copy.md  slice-06-repo-filter.md
docs/product/: jobs.yaml
docs/product/architecture/: adr-001.md  adr-002.md  adr-003.md  adr-004.md  brief.md
docs/product/journeys/: daily-commit-review.yaml
src/: error.rs  lib.rs  main.rs
src/adapters/: arboard_clipboard.rs  mod.rs  toml_config.rs  walkdir_vault.rs
src/domain/: events.rs  mod.rs  model.rs  update.rs
src/parser/: mod.rs
src/ports/: clipboard_port.rs  config_port.rs  mod.rs  vault_port.rs
src/tui/: event_loop.rs  mod.rs  view.rs
tests/acceptance/: adapter_integration_scenarios.rs  config_scenarios.rs  walking_skeleton_scenarios.rs
tests/common/: state_delta.rs
tests/fixtures/: sample_daily_note.md
tests/unit/: parser_specifications.proptest-regressions  parser_specifications.rs  update_specifications.proptest-regressions  update_specifications.rs  view_specifications.rs
