[[bin]]
name = "rusty_commit_lister"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.53", features = ["derive", "env"]}
tokio = {version = "1.48.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
config = "0.15.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.23.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
criterion = {version = "0.5", features = ["html_reports"]}

[features]
default = []

[package]
name = "rusty_commit_lister"
version = "0.1.0"
edition = "2021"
authors = [" <>"]
license = ""
description = ""
homepage = "https://github.com//rusty-commit-lister"
repository = "https://github.com//rusty-commit-lister"
documentation = "https://docs.rs/rusty_commit_lister"
readme = "README.md"
keywords = []
categories = []
rust-version = "1.70.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
