[[bin]]
name = "rusty_commit_lister"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.53", features = ["derive", "env"]}
tokio = {version = "1.48.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
ratatui = "0.26"
crossterm = "0.27"
chrono = {version = "0.4", features = ["serde"]}
walkdir = "2"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.23.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
criterion = {version = "0.8", features = ["html_reports"]}
proptest = "1.4"

[features]
default = []

[package]
name = "rusty_commit_lister"
version = "0.1.0"
edition = "2021"
authors = [" <>"]
license = ""
description = ""
homepage = "https://github.com//rusty-commit-lister"
repository = "https://github.com//rusty-commit-lister"
documentation = "https://docs.rs/rusty_commit_lister"
readme = "README.md"
keywords = []
categories = []
rust-version = "1.70.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[test]]
name = "walking_skeleton_scenarios"
path = "tests/acceptance/walking_skeleton_scenarios.rs"

[[test]]
name = "config_scenarios"
path = "tests/acceptance/config_scenarios.rs"

[[test]]
name = "adapter_integration_scenarios"
path = "tests/acceptance/adapter_integration_scenarios.rs"

[[test]]
name = "parser_specifications"
path = "tests/unit/parser_specifications.rs"

[[test]]
name = "update_specifications"
path = "tests/unit/update_specifications.rs"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
