[[bin]]
name = "rusty_commit_lister"
path = "src/main.rs"

[dependencies]
clap = {version = "4.6.1", features = ["derive", "env"]}
serde = {version = "1.0.228", features = ["derive"]}
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
ratatui = "0.30.0"
crossterm = "0.29.0"
chrono = {version = "0.4.44", features = ["serde"]}
walkdir = "2.5.0"
toml = "1.1.2"
arboard = "3.6.1"

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.2"
predicates = "3.1.4"
proptest = "1.11.0"

[features]
default = []

[package]
name = "rusty_commit_lister"
version = "0.2.2"
edition = "2021"
authors = ["Chess Seventh <chess7th@pm.me>"]
license = "MIT"
description = "Commit Lister from my Obsidian Vault"
homepage = "https://github.com//rusty-commit-lister"
repository = "https://github.com//rusty-commit-lister"
documentation = "https://docs.rs/rusty_commit_lister"
readme = "README.md"
keywords = []
categories = []
rust-version = "1.70.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[test]]
name = "walking_skeleton_scenarios"
path = "tests/acceptance/walking_skeleton_scenarios.rs"

[[test]]
name = "config_scenarios"
path = "tests/acceptance/config_scenarios.rs"

[[test]]
name = "adapter_integration_scenarios"
path = "tests/acceptance/adapter_integration_scenarios.rs"

[[test]]
name = "parser_specifications"
path = "tests/unit/parser_specifications.rs"

[[test]]
name = "update_specifications"
path = "tests/unit/update_specifications.rs"

[[test]]
name = "view_specifications"
path = "tests/unit/view_specifications.rs"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
